Replace Jetty with Tomcat (3.1) (#935)
* Replace Jetty with Tomcat

* Remove all vestiges of gzip filter