@@ -837,7 +837,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${plugin.maven.surefire.version}</version>
                     <configuration>
-                        <argLine>-Xmx4096m -XX:MaxPermSize=1024m</argLine>
+                        <argLine>-Xmx4096m</argLine>
                         <excludes>
                             <exclude>**/*$*</exclude>
                             <exclude>**/*IntegrationTest.java</exclude>
